<resources>
    <string name="app_name">E-Museum</string>
    <string name="go_to_museum">"Xác nhận"</string>
    <string name="go_back">Quay lại</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_search_code">Tìm kiếm</string>
    <string name="title_map">Bản đồ</string>
    <string name="notification_image">Notification Image</string>
    <string name="hello">Hello</string>
    <string name="title_find_by_id">Nhập mã số</string>
    <string name="title_find_by_scanning">"Quét mọi QR"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_museum">E-MUSEUM</string>
    <string name="go_to_museum_chose">Đi đến</string>
    <string name="confirm">Xác nhận</string>
    <string name="thing_id">Mã cổ vật</string>
    <string name="thing">Cổ vật</string>
    <string name="sample_thing_name">Sample Thing Name</string>
    <string name="title_activity_view_images">ViewImagesActivity</string>
    <string name="finding_nearest_museum">Đang tìm kiếm bảo tàng gần nhất</string>
    <string name="find_museum_with_gps">Tìm kiếm bằng định vị</string>
    <string name="manual_search">TÌM KIẾM THỦ CÔNG</string>
    <string name="continue_finding">Tiếp tục tìm kiếm</string>
    <string name="event_notification">Thông báo sự kiện</string>
    <string name="title_collection">Bộ sưu tập</string>
    <string name="list_collection">Các bộ sưu tập nổi bật</string>
    <string name="something">Something</string>
    <string name="title_activity_view_collection">ViewCollectionActivity</string>
    <string name="view_document">Thông tin</string>
    <string name="QR_code">Mã QR</string>
    <string name="share_content">Hãy tải app E-Museum trên Google Store để khám phá nhiều hơn!</string>
    <string name="open_time">Thời gian mở cửa</string>
    <string name="ticket_price">Giá vé vào cửa</string>
    <string name="adult">Người lớn</string>
    <string name="student">Sinh viên, học sinh</string>
    <string name="children_6_16">Trẻ em 6 - 16 tuổi</string>
    <string name="the_disable">Người khuyết tật</string>
    <string name="children_under_6">Trẻ em dưới 6 tuổi</string>
    <string name="contact">Liên lạc</string>
    <string name="phone_number">Điện thoại</string>
    <string name="website">Website</string>
    <string name="address">Địa chỉ</string>
    <string name="choose_museum">Chọn bảo tàng</string>
    <string name="condition">Điều kiện</string>
    <string name="sample_text">Contrary to popular belief, Lorem Ipsum is not simply random text.</string>
    <string name="hot">Hot</string>
    <string name="click_here_to_open_app">Nhấn vào đây để vào ứng dụng</string>
    <string name="title_activity_view_video">ViewVideoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="click_here_to_watch_video">Xem video giới thiệu</string>
</resources>