<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/title_home" />
    <item
            android:id="@+id/navigation_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/title_map" />

    <item
            android:title="@string/title_search_code"
            android:enabled="false" />
    <item
            android:id="@+id/navigation_collection"
            android:icon="@drawable/baseline_collections_24"
            android:title="@string/title_collection" />
    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />
</menu>