<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notification_view"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:translationZ="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp">

        <ImageButton
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/back_view_thing_button"
                android:background="@drawable/circle_back_button"
                android:scaleType="fitCenter"
                android:paddingStart="8dp"
                android:stateListAnimator="@animator/zoom_out_animator"
                tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/top_bar_text_view"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:textColor="@color/white" />

    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/notification_scroll_view"
            app:layout_constraintTop_toTopOf="parent"
            android:fillViewport="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/notification_main_image"
                        android:scaleType="centerCrop"
                        android:background="@drawable/rectangle_shape" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/loading_notification_progress_bar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/loading"
                        android:visibility="invisible"
                        tools:visibility="invisible" />

                <!--                <ProgressBar-->
                <!--                        style="?android:attr/progressBarStyle"-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:id="@+id/loading_notification_progress_bar"-->
                <!--                        app:layout_constraintTop_toTopOf="parent"-->
                <!--                        android:layout_marginTop="10dp"-->
                <!--                        tools:layout_editor_absoluteX="1dp"-->
                <!--                        android:visibility="invisible"-->
                <!--                        tools:visibility="invisible" />-->

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:id="@+id/notification_general_box"
                        android:visibility="visible"
                        tools:visibility="visible"
                        android:orientation="vertical">

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:paddingHorizontal="20dp">

                        <TextView
                                android:text="Notification title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/notification_name_tv"
                                android:textStyle="bold"
                                android:textColor="#fcfcf9"
                                android:textSize="25dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp" />

                        <TextView
                                android:text="Date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/event_date_tv"
                                android:textColor="#fcfcf9"
                                android:layout_marginBottom="15dp" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/event_label"
                                android:textColor="@color/background_color"
                                android:textStyle="bold"
                                android:textSize="13sp"
                                android:background="#98F90E0E"
                                android:paddingHorizontal="10dp"
                                android:paddingVertical="5dp"
                                android:text="@string/hot"
                              />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/condition_box_shape"
                                android:paddingHorizontal="10dp"
                                android:paddingVertical="5dp"
                                android:orientation="vertical"
                                android:id="@+id/condition_container">

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/condition"
                                    android:gravity="center"
                                    android:textColor="#CCFFFFFF"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="#D7FFFFFF"
                                    android:layout_marginVertical="5dp">
                            </LinearLayout>

                            <TextView
                                    android:id="@+id/notification_condition_tv"
                                    style="@style/justify_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/sample_text"
                                    android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:layout_marginBottom="8dp"
                                android:paddingVertical="5dp"
                                android:orientation="vertical">

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingBottom="5dp"
                                    android:text="Nội dung"
                                    android:textColor="#E3FFFFFF"
                                    android:textSize="19sp"
                                    android:textStyle="bold" />

                            <TextView
                                    android:id="@+id/notìication_content_tv"
                                    style="@style/justify_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:justificationMode="inter_word"
                                    android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)."
                                    android:textSize="18sp"
                                    tools:ignore="UnusedAttribute" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>